--- a/views/account.ejs
+++ b/views/account.ejs
@@ -7,6 +7,6 @@
 <p><%=user.username%></p>
 <h4>Polls you created: </h4>
 <% for(var i=0;i<polls.length;i++){ %>
-    <a href="#"><%=polls[i].title%></a>
+    <a href="/<%=user.username%>/<%=polls[i]._id%>/viewPoll"><%=polls[i].title%></a>
 <%}%>
 <%- include("footer") -%>
