--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,7 +1,8 @@
 <%- include("header") -%>
   <form action="/<%=username%>/create" method="post">
-      <input type="text" name="pollTitle" placeholder="Pole Title"><br>
-      <input type="password" name="pollID" placeholder="Poll ID"><br>
+      <input type="text" name="pollTitle" placeholder="Pole Title" required><br>
+      <input type="password" name="pollID" placeholder="Poll ID" required><br>
+      <textarea rows="6" name="desc" cols="50" placeholder="Description" value="emtpy"></textarea>><br>
       <button type="submit">Add Candidates</button>
   </form>
   <form action="/<%=username%>" method="get">
